force-app/main/default/src/objects/Loop__dsRecipient__c/fields/Loop__CustomAccessCode__c.field-meta.xml
<CustomField>
    <fullName>Loop__CustomAccessCode__c</fullName>
    <description>Access Code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This can be made dynamic by using tags from the Field Tagger.</inlineHelpText>
    <label>Access Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>