force-app/main/default/src/objects/Loop__dsRecipient__c/fields/Loop__DisplayTitle__c.field-meta.xml
<CustomField>
    <fullName>Loop__DisplayTitle__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This option will display the recipient(s)&apos;s (contact, user, lead) title when initiating DocGen Packages.</inlineHelpText>
    <label>Display Title</label>
    <type>Checkbox</type>
</CustomField>