force-app/main/default/src/objects/Loop__dsRecipient__c/fields/Loop__EmailText__c.field-meta.xml
<CustomField>
    <fullName>Loop__EmailText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>