force-app/main/default/src/objects/Loop__dsRecipient__c/fields/Loop__Host_Static_Email__c.field-meta.xml
<CustomField>
    <fullName>Loop__Host_Static_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Host Static Email</label>
    <type>Email</type>
</CustomField>