force-app/main/default/src/objects/Loop__dsRecipient__c/fields/Loop__Host_Static_Name__c.field-meta.xml
<CustomField>
    <fullName>Loop__Host_Static_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Host Static Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>