force-app/main/default/src/objects/Loop__dsRecipient__c/fields/Loop__OnAccessCodeFailed__c.field-meta.xml
<CustomField>
    <fullName>Loop__OnAccessCodeFailed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>On Access Code Failed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>