force-app/main/default/src/objects/Loop__dsRecipient__c/fields/Loop__OnCancel__c.field-meta.xml
<CustomField>
    <fullName>Loop__OnCancel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>On Cancel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>