force-app/main/default/src/objects/Loop__dsRecipient__c/fields/Loop__OnSigningComplete__c.field-meta.xml
<CustomField>
    <fullName>Loop__OnSigningComplete__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>On Signing Complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>