force-app/main/default/src/objects/Loop__dsRecipient__c/fields/Loop__OnViewingComplete__c.field-meta.xml
<CustomField>
    <fullName>Loop__OnViewingComplete__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>On Viewing Complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>