force-app/main/default/src/objects/Loop__dsRecipient__c/fields/Loop__RoleGroupNames__c.field-meta.xml
<CustomField>
    <fullName>Loop__RoleGroupNames__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Type the Role or User Group names separated by double commas for this recipient.</inlineHelpText>
    <label>Role/Group Names</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>