force-app/main/default/src/objects/Loop__dsRecipient__c/fields/Loop__SigningGroupId__c.field-meta.xml
<CustomField>
    <fullName>Loop__SigningGroupId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signing Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>