force-app/main/default/src/objects/Loop__dsRecipient__c/fields/Loop__SigningGroupName__c.field-meta.xml
<CustomField>
    <fullName>Loop__SigningGroupName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signing Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>