force-app/main/default/src/objects/Loop__dsRecipient__c/fields/Loop__StaticEmail__c.field-meta.xml
<CustomField>
    <fullName>Loop__StaticEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Static Email</label>
    <type>Email</type>
</CustomField>