force-app/main/default/src/objects/Loop__dsRecipient__c/fields/Loop__StaticName__c.field-meta.xml
<CustomField>
    <fullName>Loop__StaticName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Static Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>