force-app/main/default/src/objects/Loop__dsRecipient__c/fields/Loop__Subject__c.field-meta.xml
<CustomField>
    <fullName>Loop__Subject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>